<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">throughCode</string>
    <string name="dispositivosTextView">Dispositivos Encontrados</string>
    <string name="conectarButton">Conectar</string>
    <string name="logoImageDescription">throughCode</string>
    <string name="helpDescription">Ayuda</string>
    <string name="title_activity_interfaz">Interfaz</string>
    <string name="hello_world">Hello world!</string>
    <string name="enviar">Enviar</string>
    <string name="tutorial">\nTutorial</string>
    <string name="comandos">Comandos</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="about">About</string>
    <string name="title_activity_acerca">Acerca de</string>
    <string name="bloglink">Blog</string>
    <string name="blankspace"></string>
    <string name="abouttext"><b>throughCode - Instruction transmitter for use with compatible robot using mobile devices.</b>\n
								\n<b>Copyright © 2014 - ITESM</b>\n
								\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n
								\nThis program is distributed in the hope that it will be useful,but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n
								\nYou should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.\n
								\n<b>Authors</b>\n
								\nITESM representatives\n\nIng. Martha Sordia Salinas\n<i>[msordia@itesm.mx]</i>\nIng. Mario Isidro de la Fuente Martínez\n<i>[mario.delafuente@itesm.mx]</i>\n
								\nITESM students\n\nChristian Eduardo Rodriguez Palacios\n<i>[christian.2500@hotmail.com]</i>\nJesus Ramirez Nava\n<i>[jesus.isdr@gmail.com]</i>\nEugenio Sanchez Garza\n<i>[sanchezgarzae@gmail.com]</i>\n</string>
    <string name="title_activity_help"></string>
    <string name="title_activity_land_video">LandVideoAct</string>
    <string name="descripcion">En el siguiente video, se muestra un tutorial acerca del funcionamiento de la aplicación, junto con un breve ejemplo práctico.\n</string>
    <string name="title_activity_generic_dialog">Dialog</string>
    <string name="action_settings">Settings</string>
    <string name="durationHint">Duración (segundos)</string>
    <string name="frequencyLabel">Frecuencia (Hz)</string>
    <string name="led1Label">LED 1</string>
    <string name="led2Label">LED 2</string>
    <string name="led3Label">LED 3</string>
    <string name="led4Label">LED 4</string>
    <string name="redLabel">Rojo</string>
	<string name="greenLabel">Verde</string>
	<string name="blueLabel">Azul</string>
	<string name="cancelButton">Cancelar</string>
	<string name="acceptButton">Aceptar</string>
</resources>