<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TableLayout
        android:id="@+id/tablaComandos"
        android:layout_width="250dp"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" >

        <TextView
            android:id="@+id/secuenciaDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/abc_action_button_min_width"
            android:text="@string/instrucciones"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listCommandsToSend"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingLeft="@dimen/abc_action_bar_subtitle_text_size"
            android:textAlignment="gravity" >
        </ListView>

    </TableLayout>

    <TableLayout
        android:id="@+id/tablaBotones"
        android:layout_width="75dp"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/tableLayout1" >

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linear11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/secuenciaInstruccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comandos"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" >
                </ListView>

            </LinearLayout>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/botonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/enviar" />

    <EditText
        android:id="@+id/archivosText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/botonEnviar"
        android:layout_alignBottom="@+id/botonEnviar"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/botonEnviar"
        android:ems="10"
        android:hint="Guardar / Borrar / Abrir archivo"
        android:importantForAccessibility="yes"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:textSize="@dimen/abc_action_bar_subtitle_text_size" >

        <requestFocus />
    </EditText>

</RelativeLayout>
